Update Android CI workflow for JDK 17 and APK upload

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,27 +1,31 @@
-name: Android Tests CI
+name: Android CI
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ javac-17 ]
-  pull_request:
-    branches: [ javac-17 ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
-
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew test
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Build with Gradle
+        run: ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
